--- a/estilo-media-query.css
+++ b/estilo-media-query.css
@@ -631,13 +631,13 @@
   }
 
   .dobra-dois .imagens-dobra-dois {
-    width: 500px;
+    width: 550px;
     float: left;
-    margin: 25px;
+    margin: 25px 0 0 0;
   }
 
   .imagens-dobra-dois {
-    min-width: 500px;
+    min-width: 550px;
     min-height: 530px;
     overflow: hidden;
     position: relative;
