--- a/estilo.css
+++ b/estilo.css
@@ -257,3 +257,27 @@ select[multiple] {
 .lista-dobra-dois li span {
   font-weight: 300;
 }
+
+.form-input-endereco {
+  display: none;
+  transition: opacity 1s ease-out;
+  opacity: 0;
+  height: 0;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.form-input-endereco-active {
+  opacity: 1;
+  height: auto;
+  display: block;
+  -webkit-animation: fade-in 1.5s;
+  animation: fade-in 1.5s;
+}
