--- a/estilo.css
+++ b/estilo.css
@@ -56,6 +56,7 @@ div.section-card span {
   font-family: 'Montserrat', sans-serif;
   text-align: center;
   color: #fff;
+  margin: 0 0 28px 0;
 }
 
 .div-form input[type='text'],
@@ -300,4 +301,25 @@ select[multiple] {
   font-family: 'Montserrat', sans-serif;
   color: #fff;
   font-size: 13px;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px transparent inset !important;
+}
+
+.div-form input[type='text'] {
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
+}
+input:-webkit-autofill {
+  -webkit-text-fill-color: #fff !important;
 }
