--- a/estilo-media-query.css
+++ b/estilo-media-query.css
@@ -171,7 +171,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     position: absolute;
-    bottom: 0px;
+    top: 664px;
     right: 90px;
   }
 
