--- a/estilo-media-query.css
+++ b/estilo-media-query.css
@@ -323,12 +323,11 @@
   .dobra-dois .imagens-dobra-dois {
     width: 500px;
     float: left;
-    margin: 25px;
   }
 
   .imagens-dobra-dois {
     min-width: 500px;
-    min-height: 530px;
+    min-height: 580px;
     overflow: hidden;
     position: relative;
   }
@@ -476,7 +475,7 @@
   }
 
   .column-grid-logos {
-    width: 300px;
+    width: 120px;
     height: 200px;
     float: left;
     margin: 0 auto;
@@ -692,19 +691,17 @@
   .dobra-dois .imagens-dobra-dois {
     width: 500px;
     float: left;
-    margin: 35px;
   }
 
   .imagens-dobra-dois {
     min-width: 600px;
-    min-height: 530px;
+    min-height: 580px;
     overflow: hidden;
     position: relative;
   }
 
   .dobra-dois .imagens-dobra-dois .dobra-dois-imagem1 {
     position: absolute;
-    left: 55px;
     background-image: url(img/720/bg-dobra2-imagem1-min.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -713,7 +710,7 @@
   }
   .dobra-dois .imagens-dobra-dois .dobra-dois-imagem2 {
     position: absolute;
-    left: 340px;
+    left: 290px;
     top: 35px;
     background-image: url(img/720/bg-dobra2-imagem2-min.png);
     background-repeat: no-repeat;
@@ -723,7 +720,7 @@
   }
   .dobra-dois .imagens-dobra-dois .dobra-dois-imagem3 {
     position: absolute;
-    left: 280px;
+    left: 235px;
     top: 255px;
     background-image: url(img/720/bg-dobra2-imagem3-min.png);
     background-repeat: no-repeat;
@@ -1082,8 +1079,8 @@
 
   .dobra-dois h1 {
     font-family: 'Montserrat', sans-serif;
-    font-size: 30px;
-    margin: 45px 0 35px 0;
+    font-size: 38px;
+    margin: 45px 0 55px 0;
   }
 
   .dobra-dois .imagens-dobra-dois {
@@ -1171,5 +1168,10 @@
   #logo-facrisa-footer {
     width: 80px;
     height: 41px;
+  }
+
+  .dobra-dois input[type='button'] {
+    font-size: 23px;
+    padding: 10px 46px;
   }
 }
